--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h3{
+    font-size: 30px;
+    margin-left: 80px;
+}
+.orange-highlight{
     color: orange;
 }
 .half-width{
@@ -16,4 +21,28 @@ h1{
 .half-wifth img{
     width: 100%;
     
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 300px ;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(lightSalmon , tomato);
+    padding: 10px 20px;
+    font-weight: 700;
+    border-radius: 5px;
+    color: white;
+    
+
+}
+.experiences{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    border-left: 7px solid;
+   
 }
